dataset1235/2025-2/610742602/users/59982477/executions/906907063_1467685783.log
== SUBMISSION (2025-08-19 21:04:50)
-- CODE: 
amigos: 20 pessoas 
Quantidade_por_pessoa: 35
total_de_amigos * valor_por_pessoa: 700
print("o valor total da conta é: R$, 700 total")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    amigos: 20 pessoas 
               ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    amigos: 20 pessoas 
               ^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:02:58)
-- CODE: 
amigos: 20 pessoas 
Quantidade_por_pessoa: 35
print("o valor total da conta foi de: 700")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    amigos: 20 pessoas 
               ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    amigos: 20 pessoas 
               ^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:14:12)
-- CODE: 
amigos=20
valor_por_pessoa=35
total= amigos * valor_por_pessoa
print("o valor total da conta foi: 700 reais")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
o valor total da conta foi: 700 reais
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
o valor total da conta foi: 700 reais
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:04:22)
-- CODE: 
amigos: 20 pessoas 
Quantidade_por_pessoa: 35
total_de_amigos * valor_por_pessoa: 700
print("o valor total da conta é: R$ 700")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    amigos: 20 pessoas 
               ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    amigos: 20 pessoas 
               ^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:10:25)
-- CODE: 
amigos=20
valor_por_pessoa=35
total:amigos*valor_por_pessoa=700
print("o valor total da conta foi: 700 reais")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
o valor total da conta foi: 700 reais
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
o valor total da conta foi: 700 reais
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:03:47)
-- CODE: 
amigos: 20 pessoas 
Quantidade_por_pessoa: 35
total_de_amigos * valor_por_pessoa: 700
print("o valor total da conta foi de: 700")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    amigos: 20 pessoas 
               ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    amigos: 20 pessoas 
               ^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:02:30)
-- CODE: 
amigos: 20 pessoas 
Quantidade por pessoa: 35
20*35: 700
print("o valor total da conta foi de: 700")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    amigos: 20 pessoas 
               ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    amigos: 20 pessoas 
               ^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:10:41)
-- CODE: 
amigos=20
valor_por_pessoa=35
total=amigos*valor_por_pessoa=700
print("o valor total da conta foi: 700 reais")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 3
    total=amigos*valor_por_pessoa=700
          ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 3
    total=amigos*valor_por_pessoa=700
          ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:15:02)
-- CODE: 
amigos=20
valor_por_pessoa=35
total= amigos * valor_por_pessoa
print("o valor total da conta é: R$,700")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
o valor total da conta é: R$,700
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
o valor total da conta é: R$,700
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:04:35)
-- CODE: 
amigos: 20 pessoas 
Quantidade_por_pessoa: 35
total_de_amigos * valor_por_pessoa: 700
print("o valor total da conta é: R$, 700")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    amigos: 20 pessoas 
               ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    amigos: 20 pessoas 
               ^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:00:51)
-- CODE: 
20 * 35: 700
print("o valor total da conta foi de: 700 reais")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    20 * 35: 700
    ^^^^^^^
SyntaxError: illegal target for annotation
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    20 * 35: 700
    ^^^^^^^
SyntaxError: illegal target for annotation
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:00:39)
-- CODE: 
20 * 35: 700
print("o valor total da conta foi de: 700")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    20 * 35: 700
    ^^^^^^^
SyntaxError: illegal target for annotation
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    20 * 35: 700
    ^^^^^^^
SyntaxError: illegal target for annotation
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:02:27)
-- CODE: 
amigos: 20 pessoas 
Quantidade por pessoa: 35
20*35: 700
print("o valor total da conta foi de: 700")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    amigos: 20 pessoas 
               ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    amigos: 20 pessoas 
               ^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:14:08)
-- CODE: 
amigos=20
valor_por_pessoa=35
total=amigos * valor_por_pessoa
print("o valor total da conta foi: 700 reais")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
o valor total da conta foi: 700 reais
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
o valor total da conta foi: 700 reais
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:02:51)
-- CODE: 
amigos: 20 pessoas 
Quantidade_por_pessoa: 35
20*35: 700
print("o valor total da conta foi de: 700")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    amigos: 20 pessoas 
               ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    amigos: 20 pessoas 
               ^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:02:57)
-- CODE: 
amigos: 20 pessoas 
Quantidade_por_pessoa: 35
print("o valor total da conta foi de: 700")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    amigos: 20 pessoas 
               ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    amigos: 20 pessoas 
               ^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:05:22)
-- CODE: 
amigos: 20 pessoas 
Quantidade_por_pessoa: 35
total: total_de_amigos * valor_por_pessoa: 700
print("o valor total da conta é: R$, 700 total")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    amigos: 20 pessoas 
               ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    amigos: 20 pessoas 
               ^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:05:53)
-- CODE: 
amigos= 20 pessoas 
Quantidade_por_pessoa= 35
total= total_de_amigos * valor_por_pessoa = 700
print("o valor total da conta é: R$, 700 total")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    amigos= 20 pessoas 
               ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    amigos= 20 pessoas 
               ^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:07:55)
-- CODE: 
amigos= 20 pessoas 
Quantidade_por_pessoa= 35
print("amigos * quantidade_por_pessoa = 700")
print("o valor total da conta foi: R$ 700")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    amigos= 20 pessoas 
               ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    amigos= 20 pessoas 
               ^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
